fix: letter spacing of my story section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -318,6 +318,7 @@ span.highlight {
   padding: 12px;
   overflow: hidden;
   font-size: 16px;
+  letter-spacing: -0.1px;
   font-weight: 500;
   border-radius: 8px;
   color: var(--secondary-black);
